cabal-version:       >=1.10
name:                database-id-obelisk
version:             0.1.0.0
synopsis:            HasId/Obelisk interop
description:         A class and some instances for HasId/Obelisk interoperation
license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           2019 Obsidian Systems LLC
category:            Database
build-type:          Simple
extra-source-files: CHANGELOG.md
                    README.md

library
  exposed-modules: Database.Id.Obelisk.Route
  build-depends: base >=4.11 && <4.13
               , obelisk-route
               , database-id-class
               , mtl
               , text
  hs-source-dirs:      src
  default-language:    Haskell2010
